objects/Subbareddy__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subbareddyval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subbareddy</label>
        <referenceTo>Subbareddy__c</referenceTo>
        <relationshipLabel>subbareddys</relationshipLabel>
        <relationshipName>subbareddys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Subbareddy</label>
    <nameField>
        <label>Subbareddy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>subbareddys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>